# nfactorial_incubator_task1

./: README.md  manage.py  pyproject.toml
app_sw/: apps.py  urls.py  views.py
app_sw/static/app_sw/css/: base.css  base.css.map  base.scss  detail.css  detail.css.map  detail.scss  index.css  index.css.map  index.scss  people.css  people.css.map  people.scss  planets.css  planets.css.map  planets.scss  starships.css  starships.css.map  starships.scss
app_sw/templates/app_sw/: base.html  index.html  people.html  planet_detail.html  planets.html  starships.html
project_sw/: settings.py  urls.py
project_sw/project_sw/: asgi.py  settings.py  urls.py  wsgi.py
