[tool.poetry]
name = "nfactorial-incubator-task1"
version = "0.1.0"
description = ""
authors = ["Daoolet <dauletkhabidullin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.4"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
